--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container" *ngIf="novedad">
   <div class="container text-center">
     <div class="text-right">
       <a routerLink="../.." mat-button color="primary" class="btn-regresar">
@@ -12,10 +12,10 @@
       <span *ngIf="false">
         Ver detalle/Editar validación de
       </span>
-      solicitud de novedad NOV-001
+      solicitud de novedad {{ novedad.numeroSolicitud }}
     </h1>
     <p class="info-sub-title">
-      Número de contrato <b>A887654344</b>
+      Número de contrato <b>{{ novedad.contrato.numeroContrato }}</b>
     </p>
   </div>
 
@@ -30,52 +30,53 @@
         <strong>
           Nombre del contratista:
         </strong>
-        Constructora Colpatria SAS
+        {{ novedad.contrato.contratacion.contratista.nombre }}
+      </p>
+      <p>
+        <strong>Tipo de identificación:</strong>
+        <span>
+          {{ novedad.contrato.contratacion.contratista.tipoIdentificacionNotMapped }}
+        </span>
       </p>
       <p>
         <strong>
-          Tipo de identificación:
+          Número de identificación
         </strong>
-        NIT
+        {{ novedad.contrato.contratacion.contratista.numeroIdentificacion }}
       </p>
       <p>
-        <strong>
-          Número de identificación:
-        </strong>
-        900.879.989
+        <strong>Tipo de intervención:</strong>
+        <span>
+          {{ novedad.proyectosContrato[0].tipoIntervencion }}
+        </span>
       </p>
       <p>
-        <strong>
-          Tipo de intervención:
-        </strong>
-        Remodelación
+        <strong>Valor del contrato:</strong>
+        <span>
+          {{ novedad.proyectosContrato[0].valorTotal }}
+        </span>
       </p>
       <p>
-        <strong>
-          Valor del contrato:
-        </strong>
-        $ 130.000.000
+        <strong>Plazo:</strong>
+        <span>
+          {{ novedad.contrato.contratacion.disponibilidadPresupuestal[novedad.contrato.contratacion.disponibilidadPresupuestal.length-1].plazoDias }} Días 
+          {{ novedad.contrato.contratacion.disponibilidadPresupuestal[novedad.contrato.contratacion.disponibilidadPresupuestal.length-1].plazoMeses }} Meses 
+        </span>
       </p>
       <p>
-        <strong>
-          Plazo:
-        </strong>
-        24 meses / 25 días
+        <strong>Fecha de inicio de contrato:</strong>
+        <span>
+          
+        </span>
       </p>
       <p>
-        <strong>
-          Fecha de inicio de contrato:
-        </strong>
-        25/06/2020
-      </p>
-      <p>
-        <strong>
-          Fecha de finalización de contrato:
-        </strong>
-        20/07/2022
+        <strong>Fecha de finalización de contrato:</strong>
+        <span>
+
+        </span>
       </p>
 
-      <div *ngIf="false">
+      <div *ngIf="novedad.esAplicadaAcontrato !== true">
         <h2 class="card-subTitle">Proyecto asociado</h2>
         <p>
           <strong>
@@ -125,158 +126,77 @@
             <strong>
               Fecha de solicitud de la novedad :
             </strong>
-            17/10/2020
+            {{ novedad.fechaSolictud | date: 'dd/MM/yyyy' }}
           </p>
           <p>
             <strong>
               Instancia donde se presentó la solicitud :
             </strong>
             <span>
-              Comité de obra
+              {{ novedad.instanciaNombre }}
             </span>
           </p>
           <p>
             <strong>
               Fecha de la sesión de la instancia :
             </strong>
-            12/10/2020
+            {{ novedad.fechaSesionInstancia | date: 'dd/MM/yyyy' }}
           </p>
-          <p>
+          <!-- <p>
             <strong>
               Tipo de Novedad :
             </strong>
             Modificación de Condiciones Contractuales
-          </p>
+          </p> -->
 
         </mat-card-content>
       </mat-card>
 	        <mat-accordion>
-        <mat-expansion-panel class="expansion-style sub-expansion">
+        <mat-expansion-panel class="expansion-style sub-expansion" *ngFor=" let descripcion of novedad.novedadContractualDescripcion; let i = index; ">
           <mat-expansion-panel-header class="expansion-style--header">
             <mat-panel-title class="expansion-style--title">
-              Novedad 1
+              Novedad {{ 1 + i }}
             </mat-panel-title>
           </mat-expansion-panel-header>
           <mat-card class="shipping-card var-main-gris">
             <mat-card-header class="header-card header-card--margin">
               <mat-card-title class="header-card--text textoGris">
-                Suspensión
+                {{ descripcion.nombreTipoNovedad }}
               </mat-card-title>
             </mat-card-header>
             <mat-card-content>
-              <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
+              <strong>Motivos de la novedad :</strong> 
+                  <section *ngFor="let motivo of descripcion.novedadContractualDescripcionMotivo;"> {{ motivo.nombreMotivo}}, </section> 
+              
               <p><strong>Resumen de la justificación de la novedad: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <mat-card-title class="header-card--text sub-text">
+                <section 
+                        [innerHTML]="descripcion.resumenJustificacion"
+                        style="margin-left: 2em"
+                ></section>
+              <mat-card-title class="header-card--text sub-text" *ngIf="descripcion.tipoNovedadCodigo == '4'">
                 Plazo solicitado
               </mat-card-title>
-              <p><strong>Fecha de inicio de la suspensión: </strong> xxxxxxxxxxxxxxxxxx</p>
-              <p><strong>Fecha final de la suspensión: </strong> xxxxxxxxxxxxxxxxxx</p>
-              <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> No</p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo Adicional Meses: </strong> {{ descripcion.plazoAdicionalMeses }}</p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo Adicional Días: </strong> {{ descripcion.plazoAdicionalDias }}</p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha de inicio de la suspensión: </strong> {{ descripcion.fechaInicioSuspension | date: 'dd/MM/yyyy' }}</p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha final de la suspensión: </strong> {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }} </p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '3'" ><strong>Presupuesto adicional solicitado: </strong> {{ descripcion.presupuestoAdicionalSolicitado }} </p>
+              <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> {{ descripcion.esDocumentacionSoporte === true ? 'Sí' : 'No' }}</p>
               <p><strong>Concepto técnico: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
-              <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
+              <section 
+                        [innerHTML]="descripcion.conceptoTecnico"
+                        style="margin-left: 2em"
+                ></section>
+              <p><strong>Fecha concepto técnico: </strong> {{ descripcion.fechaConcepto | date: 'dd/MM/yyyy' }}</p>
+              <p><strong>Número de radicado en FFIE de solicitud: </strong> {{ descripcion.numeroRadicado }}</p>
             </mat-card-content>
           </mat-card>
-        </mat-expansion-panel>
-        <mat-expansion-panel class="expansion-style sub-expansion">
-          <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title">
-              Novedad 2
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-card class="shipping-card var-main-gris">
-            <mat-card-header class="header-card header-card--margin">
-              <mat-card-title class="header-card--text textoGris">
-                Adición
-              </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
-              <p><strong>Resumen de la justificación de la novedad: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>Presupuesto adicional solicitado:</strong>xxxxxxxxxxxxx </p>
-              <p><strong>¿Cuenta con la documentación soporte suficiente?:</strong>No </p>
-              <p><strong>Concepto técnico: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
-              <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
-            </mat-card-content>
-          </mat-card>
-        </mat-expansion-panel>
-        <mat-expansion-panel class="expansion-style sub-expansion">
-          <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title">
-              Novedad 3
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-card class="shipping-card var-main-gris">
-            <mat-card-header class="header-card header-card--margin">
-              <mat-card-title class="header-card--text textoGris">
-                Modificaciones de condiciones contractuales
-              </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
-              <p><strong>Resumen de la justificación de la novedad: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <mat-card-title class="header-card--text sub-text">
-                Clausula 1
-              </mat-card-title>
-              <p><strong>Cláusula a modificar: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>Ajuste solicitado a la cláusula: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <mat-card-title class="header-card--text sub-text">
-                Clausula 2
-              </mat-card-title>
-              <p><strong>Cláusula a modificar: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>Ajuste solicitado a la cláusula: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>¿Cuenta con la documentación soporte suficiente?:</strong>No </p>
-              <p><strong>Concepto técnico: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
-              <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
-            </mat-card-content>
-          </mat-card>
-        </mat-expansion-panel>
-        <mat-expansion-panel class="expansion-style sub-expansion">
-          <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title">
-              Novedad 4
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-          
         </mat-expansion-panel>
       </mat-accordion>
-
     </mat-expansion-panel>
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title ">
+        <mat-panel-title class="expansion-style--title">
           Soporte de la solicitud
         </mat-panel-title>
       </mat-expansion-panel-header>
@@ -288,12 +208,17 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content>
+
           <p>
             <strong>
               URL con soporte:
             </strong>
-            https://drive.google.com/drive/registrodecontroversiacontractual/registrosolicituddenovedad
+            <a [href]="novedad.urlSoporte"
+              target="_blank" rel="noopener noreferrer">
+              {{ novedad.urlSoporte }}
+            </a>
           </p>
+
         </mat-card-content>
       </mat-card>
 
