--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
@@ -69,19 +69,19 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
-          [routerLink]="[ 'validarSolicitudNovedadObra', element.id ]">
+          [routerLink]="[ 'validarSolicitudNovedadObra', element.novedadContractualId ]">
           Validar solicitud
         </a>
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-        (click)="this.rechazarSolicitud( element.archivoCargueId)">
+        (click)="this.rechazarSolicitud( element.novedadContractualId)">
           Rechazar solicitud
         </button>
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
-        [routerLink]="[ 'verDetalleEditarSolicitudNovedadObra', element.id ]">
+        [routerLink]="[ 'verDetalleEditarSolicitudNovedadObra', element.novedadContractualId ]">
         Ver detalle/Editar
       </a>
       <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
-      [routerLink]="[ 'verDetalleSolicitudNovedadObra', element.id ]">
+      [routerLink]="[ 'verDetalleSolicitudNovedadObra', element.novedadContractualId ]">
       Ver detalle
     </a>
       <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button">
