--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -51,23 +51,23 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'validarSolicitudNovedadInterventoria', element.id ]">
+          [routerLink]="[ 'validarSolicitudNovedadInterventoria', element.novedadContractualId ]">
           Validar solicitud
         </a>
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-        (click)="this.rechazarSolicitud( element.archivoCargueId)">
+        (click)="this.rechazarSolicitud( element.novedadContractualId)">
           Rechazar solicitud
         </button>
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-        (click)="this.devolverSolicitud( element.archivoCargueId)">
-        Delvolver solicitud
+        (click)="this.devolverSolicitud( element.novedadContractualId)">
+        Devolver solicitud
         </button>
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'verDetalleEditarSolicitudNovedadInterventoria', element.id ]">
+          [routerLink]="[ 'verDetalleEditarSolicitudNovedadInterventoria', element.novedadContractualId ]">
           Ver detalle/Editar
         </a>
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-        [routerLink]="[ 'verDetalleSolicitudNovedadInterventoria', element.id ]">
+        [routerLink]="[ 'verDetalleSolicitudNovedadInterventoria', element.novedadContractualId ]">
         Ver detalle
       </a>
       </td>
