--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container" *ngIf="novedad">
   <div class="container text-center">
     <div class="text-right">
       <a routerLink="../.." mat-button color="primary" class="btn-regresar">
@@ -6,7 +6,7 @@
       </a>
     </div>
     <h1 class="title-menu--h1">
-      Ver detalle registro solicitud de novedad
+      Ver detalle registro solicitud de novedad {{ novedad.numeroSolicitud }}
     </h1>
     <p class="mt-05em color-mainColor">
       Número de contrato <b>{{ novedad.contrato.numeroContrato }}</b>
@@ -69,6 +69,40 @@
 
         </span>
       </p>
+
+      <div *ngIf="novedad.esAplicadaAcontrato !== true">
+        <h2 class="card-subTitle">Proyecto asociado</h2>
+        <p>
+          <strong>
+            Llave MEN:
+          </strong>
+          LY886643
+        </p>
+        <p>
+          <strong>
+            Departamento:
+          </strong>
+          Antioquia
+        </p>
+        <p>
+          <strong>
+            Municipio:
+          </strong>
+          Bello
+        </p>
+        <p>
+          <strong>
+            Institución educativa:
+          </strong>
+          I.E. José Cuervo
+        </p>
+        <p>
+          <strong>
+            Sede:
+          </strong>
+          Única sede
+        </p>
+      </div>
 
     </mat-card-content>
   </mat-card>
@@ -174,10 +208,10 @@
             <strong>
               URL con soporte:
             </strong>
-            <!-- <a href="https://drive.google.com/drive/registrodecontroversiacontractual/registrosolicituddenovedad" -->
-              <!-- target="_blank" rel="noopener noreferrer"> -->
-              https://drive.google.com/drive/registrodecontroversiacontractual/registrosolicituddenovedad
-            <!-- </a> -->
+            <a [href]="novedad.urlSoporte"
+              target="_blank" rel="noopener noreferrer">
+              {{ novedad.urlSoporte }}
+            </a>
           </p>
 
         </mat-card-content>
