--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/aprobar-balance/aprobar-balance.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/aprobar-balance/aprobar-balance.component.html
@@ -1,6 +1,6 @@
 <section class="container">
   <div class="text-right">
-    <a routerLink="../../" mat-button color="primary" class="btn-regresar">
+    <a routerLink="./../" mat-button color="primary" class="btn-regresar">
       <img src="assets/img/icon/regresar.svg" alt="Regresar" />
     </a>
   </div>
@@ -66,10 +66,10 @@
     <a [routerLink]="['recursos']" mat-raised-button color="accent" class="tabs--btn">
       Ver recursos comprometidos y pagados
     </a>
-    <a [routerLink]="['ejecucionFinanciera']" mat-raised-button color="accent" class="tabs--btn">
+    <a [routerLink]="['verEjecucionFinanciera']" mat-raised-button color="accent" class="tabs--btn">
         Ver ejecución financiera por componente
     </a>
-    <a [routerLink]="['traslados']" mat-raised-button color="accent" class="tabs--btn">
+    <a [routerLink]="['verTrasladosRecursos']" mat-raised-button color="accent" class="tabs--btn">
         Ver traslados de recursos
     </a>
   </div>
