--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/aprobar-requisitos-liquidacion/aprobar-requisitos-liquidacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/aprobar-requisitos-liquidacion/aprobar-requisitos-liquidacion.component.html
@@ -85,7 +85,7 @@
             Informe final
           </mat-panel-title>
         </mat-expansion-panel-header>
-        Informe final
+        <app-tabla-informe-final></app-tabla-informe-final>
       </mat-expansion-panel>
     </mat-accordion>
   </div>
