--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/observaciones-informe-final/observaciones-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/observaciones-informe-final/observaciones-informe-final.component.html
@@ -1,46 +1,37 @@
 <form [formGroup]="observaciones" novalidate (ngSubmit)="onSubmit()">
-  <div class="row justify-content-center align-items-center">
+  <div class="row justify-content-center align-items-center mt-2em">
     <div class="col-md-12">
       <div class="row justify-content-center align-items-center" style="width: 100%">
         <div class="pr-1">
           <label class="label-left" for="tieneObservaciones">
-            ¿Desde la supervisión tiene observaciones frente a el balance que deban ser tenidas en cuenta en la
-            liquidación?
+            ¿Tiene observaciones frente a el informe final que deban ser tenidas en cuenta en la liquidación?
           </label>
         </div>
         <div>
           <mat-radio-group class="radioInput" formControlName="tieneObservaciones">
-            <mat-radio-button [value]="true" [checked]="observaciones.get('tieneObservaciones').value === true">
-              Sí
-            </mat-radio-button>
-            <mat-radio-button [value]="false" [checked]="observaciones.get('tieneObservaciones').value === false">
-              No
-            </mat-radio-button>
+            <mat-radio-button [value]="true"> Sí </mat-radio-button>
+            <mat-radio-button [value]="false"> No </mat-radio-button>
           </mat-radio-group>
         </div>
         <span class="required-form-group m-0 margin-required">*</span>
+        <span class="icon-incompleto">
+          <img
+            class="icon-incompleto--img"
+            src="assets/img/icon/incompleto.svg"
+            alt="este campo es requerido"
+            [matTooltipPosition]="'above'"
+            matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip"
+            *ngIf="
+              (observaciones.get('tieneObservaciones').invalid && observaciones.get('tieneObservaciones').touched) ||
+              (observaciones.get('tieneObservaciones').invalid && estaEditando)
+            "
+          />
+        </span>
       </div>
-      <span class="icon-incompleto">
-        <img
-          class="icon-incompleto--img"
-          src="assets/img/icon/incompleto.svg"
-          alt="este campo es requerido"
-          [matTooltipPosition]="'above'"
-          matTooltip="Debe ingresar la información en el campo para continuar"
-          matTooltipClass="info-tooltip"
-          *ngIf="
-            (observaciones.get('tieneObservaciones').invalid && observaciones.get('tieneObservaciones').touched) ||
-            (observaciones.get('tieneObservaciones').invalid && estaEditando)
-          "
-        />
-      </span>
     </div>
   </div>
-  <div
-    class="d-flex mt-2em align-items-center animatedDown"
-    *ngIf="observaciones.value.tieneObservaciones == true"
-    align="left"
-  >
+  <div class="d-flex mt-2em align-items-center animatedDown" *ngIf="observaciones.value.tieneObservaciones === true">
     <div
       class="text-area-quill"
       [class.color-secondaryColor]="
@@ -89,6 +80,7 @@
       />
     </span>
   </div>
+
   <div class="text-center mb-2em">
     <button
       mat-button
