--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/dialog-observaciones-vfsp/dialog-observaciones-vfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/dialog-observaciones-vfsp/dialog-observaciones-vfsp.component.html
@@ -3,53 +3,45 @@
 </button>
 <div style="padding: 30px 20px; text-align: center;">
     <h1 class="title-menu--h1 centerTrick">
-        Observaciones item 2
+        Observaciones item {{ data.jIndex + 1 }}
     </h1>
     <p>
-        Copia de la resolución de la facturación vigente
+        {{ data.registro.get( 'listaChequeoItemNombre' ).value }}
     </p>
     <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
         <div class="row">
             <div class="col-md-12" style="padding-left: 0;">
                 <div>
                     <div class="d-flex align-items-center">
-                        <div class="text-area-quill"               
-                        [ngClass]="{
-                            'color-secondaryColor':
-                              (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
-                              (addressForm.get('observaciones').invalid && estaEditando)
-                          }" style="text-align: left; margin-top: 1em; max-width: calc(100% - 2.3em); margin-left: -2em;">
-                            <label for="observaciones" class="text-area-quill--label size-label"
-                            [ngClass]="{
-                                'colorMainColor':
-                                  !((addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
-                                  (addressForm.get('observaciones').invalid && estaEditando))
-                              }">
-                                Observaciones
-                            </label>
-                            <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
-                                (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones>
-                            </quill-editor>
+                        <div    class="text-area-quill"               
+                                [ngClass]="{ 'color-secondaryColor': (addressForm.get('observaciones')?.invalid && addressForm.get('observaciones').touched) || (addressForm.get('observaciones')?.invalid && estaEditando) }"
+                                style="text-align: left; margin-top: 1em; max-width: calc(100% - 2.3em); margin-left: -2em;">
+                                <label  for="observaciones"
+                                        class="text-area-quill--label size-label"
+                                        [ngClass]="{ 'colorMainColor': !((addressForm.get('observaciones')?.invalid && addressForm.get('observaciones').touched) || (addressForm.get('observaciones')?.invalid && estaEditando)) }">
+                                        Observaciones
+                                </label>
+                                <quill-editor   class="quill-editor-style"
+                                                [styles]="editorStyle" [modules]="config" required
+                                                (onContentChanged)="maxLength($event, 1000)"
+                                                formControlName="observaciones"
+                                                #observaciones>
+                                </quill-editor>
                         </div>
                         <span class="contador miles" *ngIf="addressForm.controls.observaciones.value">
-                            {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
+                            {{ 1000 - ( textoLimpio(observaciones.quillEditor, 1000 ) ) }}
                         </span>
                         <span class="contador miles" *ngIf="!addressForm.controls.observaciones.value">
                             1000
                         </span>
                         <span class="icon-incompleto">
-                            <img
-                              class="icon-incompleto--img"
-                              src="assets/img/icon/incompleto.svg"
-                              alt="este campo es requerido"
-                              [matTooltipPosition]="'above'"
-                              matTooltip="Debe ingresar la información en el campo para continuar"
-                              matTooltipClass="info-tooltip"
-                              *ngIf="
-                                (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
-                                (addressForm.get('observaciones').invalid && estaEditando)
-                              "
-                            />
+                            <img    class="icon-incompleto--img"
+                                    src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido"
+                                    [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip"
+                                    *ngIf="( addressForm.get('observaciones')?.invalid && addressForm.get('observaciones').touched) || (addressForm.get('observaciones')?.invalid && estaEditando )">
                           </span>
                     </div>
                 </div>
@@ -57,38 +49,31 @@
         </div>
         <div class="row mtop justCenter">
             <div class="col-md-5">
-                <label class="label-left supportBlack" for="puedeSubsanar" 
-                [ngClass]="{
-                    'color-secondaryColor':
-                      (addressForm.get('puedeSubsanar').invalid && addressForm.get('puedeSubsanar').touched) ||
-                      (addressForm.get('puedeSubsanar').invalid && estaEditando)
-                  }">¿Esta observacion se puede subsanar?</label>
+                <label  class="label-left supportBlack"
+                        for="tieneSubsanacion" 
+                        [ngClass]="{ 'color-secondaryColor': (addressForm.get('tieneSubsanacion')?.invalid && addressForm.get('tieneSubsanacion').touched) || (addressForm.get('tieneSubsanacion')?.invalid && estaEditando) }">
+                        ¿Esta observacion se puede subsanar?
+                </label>
             </div>
             <div class="col-md-3">
-                <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
-                    formControlName="puedeSubsanar">
+                <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput" formControlName="tieneSubsanacion">
                     <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
                     <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
                 </mat-radio-group>
                 <span class="required-form-group" style="margin-left: 1px;">*</span>
             </div>
             <span class="icon-incompleto">
-                <img
-                  class="icon-incompleto--img"
-                  src="assets/img/icon/incompleto.svg"
-                  alt="este campo es requerido"
-                  [matTooltipPosition]="'above'"
-                  matTooltip="Debe ingresar la información en el campo para continuar"
-                  matTooltipClass="info-tooltip"
-                  *ngIf="
-                    (addressForm.get('puedeSubsanar').invalid && addressForm.get('puedeSubsanar').touched) ||
-                    (addressForm.get('puedeSubsanar').invalid && estaEditando)
-                  "
-                />
-              </span>
+                <img    class="icon-incompleto--img"
+                        src="assets/img/icon/incompleto.svg"
+                        alt="este campo es requerido"
+                        [matTooltipPosition]="'above'"
+                        matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip"
+                        *ngIf="( addressForm.get('tieneSubsanacion')?.invalid && addressForm.get('tieneSubsanacion').touched) || (addressForm.get('tieneSubsanacion')?.invalid && estaEditando )">
+            </span>
         </div>
         <div class="text-center" style="margin-top: 15px;">
-            <button mat-raised-button color="accent" class="btn-dialog" type="submit" [disabled]="addressForm.invalid">
+            <button mat-raised-button color="accent" class="btn-dialog" type="submit" [disabled]="addressForm.dirty === false">
                 Realizar observación
             </button>
         </div>
