--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
@@ -443,7 +443,7 @@
                             <mat-form-field appearance="fill" style="width: 91%;">
                                 <mat-select class="padding-left" formControlName="departamento" required (ngModelChange)="getMunicipiosByDepartamento( $event )">
                                   <mat-option *ngFor="let value of listaDepartamento" [value]="value">
-                                      {{ value.descripcion }}
+                                      {{ firstLetterUpperCase( value.descripcion ) }}
                                   </mat-option>
                                 </mat-select>
                             </mat-form-field>
@@ -479,14 +479,14 @@
                                 <section *ngIf="formUsuario.get( 'municipio' ).value === null">
                                     <mat-select class="padding-left" formControlName="municipio" required>
                                         <mat-option *ngFor="let value of listaMunicipio" [value]="value">
-                                            {{ value.descripcion }}
+                                            {{ firstLetterUpperCase( value.descripcion ) }}
                                         </mat-option>
                                     </mat-select>
                                 </section>
                                 <section *ngIf="formUsuario.get( 'municipio' ).value !== null">
                                     <mat-select class="padding-left" formControlName="municipio" required>
                                         <mat-option [value]="formUsuario.get( 'municipio' ).value">
-                                            {{ formUsuario.get( 'municipio' ).value.descripcion }}
+                                            {{ firstLetterUpperCase( formUsuario.get( 'municipio' ).value.descripcion ) }}
                                         </mat-option>
                                     </mat-select>
                                 </section>
